Add scaffolding styles

--- a/src/components/libs/console-viewer/console-viewer.module.scss
+++ b/src/components/libs/console-viewer/console-viewer.module.scss
@@ -4,4 +4,8 @@
   left: 0;
   width: 100vw;
   height: 400px;
+  padding: 30px;
+  background-color: #040303;
+  border: 3px solid #b0b0b0;
+  border-radius: 10px 10px 0 0;
 }
