--- a/src/components/libs/console-viewer/console-viewer.module.scss
+++ b/src/components/libs/console-viewer/console-viewer.module.scss
@@ -4,8 +4,45 @@
   left: 0;
   width: 100vw;
   height: 400px;
-  padding: 30px;
+  padding: 7px 30px;
+  overflow: scroll;
+  color: aquamarine;
   background-color: #040303;
   border: 3px solid #b0b0b0;
+  border-bottom: 0;
   border-radius: 10px 10px 0 0;
+  transform: translateY(calc(100% - 45px));
+  transition: 500ms;
+
+  &_open {
+    transform: translateY(0);
+  }
+}
+
+.headerRow {
+  display: flex;
+  width: 100%;
+  padding-top: 4px;
+  padding-bottom: 8px;
+  cursor: pointer;
+}
+
+.logItem {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  line-height: 1.2;
+
+  pre {
+    margin: 0;
+  }
+}
+
+.timeStamp {
+  color: #fbc771;
+}
+
+.title {
+  margin: 0;
+  font-size: 20px;
 }
